2005-03-01  Sureshkumar T  <tsureshkumar@novell.com>

	* System.Data.dll.sources: Added System.Data.Common/
	ConnectionStringsSectionHandler.cs.
	* app_test_2.0.config: Changed the configuration handler for
	seciton "connectionStrings".

2005-02-22  Sureshkumar T  <tsureshkumar@novell.com>
        
	* System.Data_test.dll.sources: Added
	System.Data.Common/ConnectionStringsSectionTest.cs
	
2005-02-22  Sureshkumar T  <tsureshkumar@novell.com>

	* Makefile: added dependancy for test-lib to create
	$(test-lib).config. These configuration entries are used currently
	by Test/System.Data.Common/DbProviderFactories-
	ConigurationHalderTest.cs tests. Future tests can also add
	configuration information in configuration file
	app_test.2.0.config. This is for 2.0 profile only.

	* System.Data_test.dll.sources: 
	Added System.Data.Common/DbProviderFactoriesConfigurationHandlerTest.cs.

	* System.Data.dll.sources: 
	Added System.Data.SqlClient/SqlClientFactory.cs
	Added System.Data.SqlClient/SqlDataSourceEnumerator.cs

2005-02-15  Atsushi Enomoto  <atsushi@ximian.com>

	* System.Data.dll.sources : added XmlSchemaWriter.cs.

2005-02-02  Atsushi Enomoto  <atsushi@ximian.com>

	* System.Data_test.dll.sources : added DataViewManagerTest.cs.

2005-01-24  Atsushi Enomoto  <atsushi@ximian.com>

	* System.Data_test.dll.sources : added DataRowViewTest.cs.

2004-11-25  Raja R Harinath  <rharinath@novell.com>

	* Makefile (BUILT_SOURCES): New.  Build Mono.Data.SqlExpressions/Parser.cs.
	(EXTRA_DISTFILES): Add Mono.Data.SqlExpressions/Parser.jay.
	* System.Data.dll.sources: Don't mention Mono.Data.SqlExpressions/Parser.cs.

2004-11-10  Martin Baulig  <martin@ximian.com>

	* System.Data.Sql/ISqlCommand.cs,
	System.Data.Sql/ISqlConnection.cs,
	System.Data.Sql/ISqlExecutionContext.cs,
	System.Data.Sql/ISqlParameterCollection.cs,
	System.Data.Sql/ISqlTransaction.cs: Added `new' modifiers where needed.

2004-10-06  Umadevi S <sumadevi@novell.com>