@@ -1,3 +1,8 @@
+2005-03-02  Sureshkumar T  <tsureshkumar@novell.com>
+
+	* DbConnectionBase.cs: CreateDbCommand: assign connection to the
+	created command.
+
 2005-02-02  Sureshkumar T  <tsureshkumar@novell.com>
 
 	* DbConnectionBase.cs: Implement Dispose Pattern
